--- a/cv/index.html
+++ b/cv/index.html
@@ -1,9 +1,7 @@
 <html lang="fr">
 <head>
-<!-- note the meta tag -->
-<meta http-equiv="refresh" content="0; url=http://leahwhite.github.io/CV.pdf" />
-  <meta charset="utf-8">
-  <title>Will CV</title>
+  <a href:="leahwhite.github.io/cv/cv.pdf" target="_blank">PDF.</a>
+  <title>Curriculum vitae</title>
 </head>
 <body>
 </body>
