--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Alice Eleanor Matthews wesbite</title>
+	<title>Leah White</title>
 	<link href="css/main.css" rel="stylesheet" type="text/css">
 	<meta name="description"content="Leah White's academic website. See my CV, projects, interests, and contact information."/>
 	<meta name="keywords"content="fire ecology, new mexico state university, women in STEM, wildlife ecology, new mexico, desert, ecology" />
@@ -13,7 +13,6 @@
   
   <!-- MAIN HEADER -->
 	<section class="leahwhite-main-header">
-		<div class="leahwhite-main-header__bkg-img" style="background-image: url('');">
 
 				<div class="alicee-main-header__block-image">
 					<header>
