--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 				<div class="alicee-main-header__block-image">
 					<header>
-						<h1>Alice Eleanor Matthews</h1>
+						<h1>Leah White</h1>
 
 						<figure class="alicee-main-header__img">
 							<img src="aliceimage.JPG">
@@ -24,12 +24,8 @@
 
 						<div class="alicee-socialmedia-buttons">
 							<ul>
-								<a href="https://github.com/AliceEMaffs"rel="noopener noreferrer" target="_blank" class="fa fa-github"></a>
-								<a href="https://www.linkedin.com/in/alice-eleanor-matthews-a82616111"rel="noopener noreferrer" target="_blank" class="fa fa-linkedin"></a>
-								<a href="https://www.facebook.com/profile.php?id=1308188305"rel="noopener noreferrer" target="_blank" class="fa fa-facebook"></a>
-								<a href="https://www.instagram.com/astroally/"rel="noopener noreferrer" target="_blank" class="fa fa-instagram"></a>
-								<a href="https://www.youtube.com/channel/UCSFF-4gjdcWCiAs-qJzxzgQ?view_as=subscriber"rel="noopener noreferrer" target="_blank" class="fa fa-youtube"></a>
-								<!-- <a href="https://www.pinterest.co.uk/allyeleanormatt"rel="noopener noreferrer" target="_blank" class="fa fa-pinterest"></a> -->			
+								<a href="https://twitter.com/mammaldreams"rel="noopener noreferrer" target="_blank" class="fa fa-twitter></a>
+								
 							</ul>
 						</div>
 					</header>
